@@ -9,6 +9,9 @@ Version 1.13.6+dev:
  * Language and i18n:
    * Updated translations: British English, German, Portuguese (Brazil).
 
+ * Miscellaneous and bug fixes:
+   * Fixed severe lag/freeze on slow PCs (bug #25356)
+
 
 Version 1.13.6:
  * AI:
