@@ -472,6 +472,14 @@ void pump()
 		last_resize_event_used = true;
 	}
 
+	// move all draw events to the end of the queue
+	auto first_draw_event = std::remove_if(events.begin(), events.end(),
+		[](const SDL_Event& e) {return e.type == DRAW_EVENT;});
+	if(first_draw_event != events.end()) {
+		// remove all draw events except one
+		events.erase(first_draw_event + 1, events.end());
+	}
+
 	ev_end = events.end();
 
 	for(ev_it = events.begin(); ev_it != ev_end; ++ev_it){
