@@ -15,6 +15,8 @@ Version 1.13.6+dev:
  * WML Engine:
    * Removed LOW_MEM option when building.
    * Add color= attribute to [floating_text]
+ * Miscellaneous and bug fixes:
+   * Fixed severe lag/freeze on slow PCs (bug #25356)
 
 Version 1.13.6:
  * AI:
